CAR/deploy/kubernetes/STFC/django/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: django-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: "letsencrypt-nginx-production"
spec:
  tls:
    - hosts:
        - car.xchem.diamond.ac.uk
      secretName: stack-tls
  rules:
    - host: car.xchem.diamond.ac.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: django-service
              servicePort: 8000
